[package]
name = "wasm-aes"
version = "0.1.0"
edition = "2021"
description = "WASM-AES is a web based AES256 data encryption tool using WASM in the browser"
authors = ["Venkatesh Omkaram"]
notices = ["Copyright (c) 2024 Venkatesh Omkaram"]
license = "Apache-2.0"
repository = "https://github.com/omkarium/wasm-aes"
homepage = "https://github.com/omkarium/wasm-aes"
readme = "README.md"
keywords = ["aes", "aes-256", "aes-gcm", "file-encryption-tool", "encryption", "encrypt", "wasm"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
byte-aes = "0.2.2"
aes-gcm = "0.10.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.8"
zeroize= "1.7.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.69", features = ["console"] }
base64 = "0.22.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
